# solana-opx-paper

./: .env.example  .env.local.example  .gitignore  CONTRIBUTING.md  CONTRIBUTOR.md  DATABASE_SETUP.md  LICENSE  README.md  REDIS_SETUP.md  REDIS_UI_INTEGRATION.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/ISSUE_TEMPLATE/: feature_request.md
anchor/: Cargo.toml
anchor/programs/basic/: Cargo.toml
anchor/programs/basic/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20250817184458_init/: migration.sql
prisma/migrations/20250817185646_remove_ip_tracking/: migration.sql
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/mint/: page.tsx
src/app/mint-option/: page.tsx
src/app/omlp/: page.tsx
src/app/option-lab/: page.tsx
src/app/trade/: page.tsx
src/components/: TrackingExample.tsx  theme-toggle.tsx
src/components/account/: account-balance-chart.tsx  account-data-access.ts  account-positions.tsx  (+5 more)
src/constants/: constants.ts
src/context/: asset-price-provider.tsx  lending-positions-provider.tsx
src/hooks/: useMouseGlow.ts  usePageVisibility.ts  useRedisPoolInitialization.ts  useRedisPoolsAPI.ts  useTracking.ts
src/lib/: birdeye.ts  constants.ts  navigation-tracking-stats.ts  option-calculator.ts  priceStorage.ts  tokens.ts  wallet-tracking.ts
src/stores/: optionsStore.ts
src/tests/: optionCalculation.test.ts
src/types/: birdeye.ts  market.ts  misc.ts  order.ts
src/utils/: console-filter.ts  time-utils.ts  utils.ts
styles/: options.css
(+210 files in other folders)
